--- a/index.html
+++ b/index.html
@@ -79,10 +79,9 @@
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
           <div class="socials">
             <ul>
-              <li><a href="https://www.instagram.com/matheusbrunoalmeida/"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
-              <li><a href="https://www.facebook.com/matheusbruno.botelhoalmeida"><span class="ico-circle"><i class="ion-social-facebook"></i></span></a></li>
-              <li><a href="https://github.com/MatheusBrunoAlmeida"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
-              <li><a href="https://api.whatsapp.com/send?phone=5562996845012&text=Ola!%20Vim%20pelo%20seu%20site"><span class="ico-circle"><i class="ion-social-whatsapp"></i></span></a></li>
+              <li><a href="https://www.instagram.com/annalaralacerda/" target="_blanck"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
+              <li><a href="https://br.pinterest.com/annalaralacerdaa/boards/" target="_blanck"><span class="ico-circle"><i class="fa fa-pinterest" aria-hidden="true"></i></span></a></li>
+              <li><a href="https://api.whatsapp.com/send?phone=5562981858307&text=Ola%2C%20vim%20atrav%C3%A9s%20do%20seu%20site%2C%20gostaria%20de%20te%20conhecer%20mais." target="_blanck"><span class="ico-circle"><i class="ion-social-whatsapp"></i></span></a></li>
             </ul>
           </div>
         </div>
@@ -107,7 +106,7 @@
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
                       <p><span class="title-s">Nome: </span> <span>Anna Lara Lacerda</span></p>
-                      <p><span class="title-s">Profição: </span> <span>Social Midia e Marketing Digital</span></p>
+                      <p><span class="title-s">Profição: </span> <span>Social Media e Marketing Digital</span></p>
                       <p><span class="title-s">Email: </span> <span>anna.lara.l2001@gmail.com</span></p>
                       <p><span class="title-s">Telefon: </span> <span>(62) 98185-8307</span></p>
                     </div>
@@ -616,10 +615,9 @@
                   </div>
                   <div class="socials">
                     <ul>
-                      <li><a href="https://www.instagram.com/matheusbrunoalmeida/"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
-                      <li><a href="https://www.facebook.com/matheusbruno.botelhoalmeida"><span class="ico-circle"><i class="ion-social-facebook"></i></span></a></li>
-                      <li><a href="https://github.com/MatheusBrunoAlmeida"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
-                      <li><a href="https://api.whatsapp.com/send?phone=5562996845012&text=Ola!%20Vim%20pelo%20seu%20site"><span class="ico-circle"><i class="ion-social-whatsapp"></i></span></a></li>
+                      <li><a href="https://www.instagram.com/annalaralacerda/" target="_blanck"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
+                      <li><a href="https://br.pinterest.com/annalaralacerdaa/boards/" target="_blanck"><span class="ico-circle"><i class="fa fa-pinterest" aria-hidden="true"></i></span></a></li>
+                      <li><a href="https://api.whatsapp.com/send?phone=5562981858307&text=Ola%2C%20vim%20atrav%C3%A9s%20do%20seu%20site%2C%20gostaria%20de%20te%20conhecer%20mais." target="_blanck"><span class="ico-circle"><i class="ion-social-whatsapp"></i></span></a></li>
                     </ul>
                   </div>
                 </div>
