--- a/index.html
+++ b/index.html
@@ -596,12 +596,12 @@
                 <div class="col-md-6">
                   <div class="title-box-2 pt-4 pt-md-0">
                     <h5 class="title-left">
-                      Sempre pronto para te atender
+                      Sempre pronta para te atender
                     </h5>
                   </div>
                   <div class="more-info">
                     <p class="lead">
-                      É só chamar que estarei pronto para atende-lo!
+                      É só chamar que estarei pronta para atende-los!
                       <br>
                       <br>
                       <br>
@@ -609,8 +609,8 @@
                     </p>
                     <ul class="list-ico">
                       <li><span class="ion-ios-location"></span> Goiânia - GO</li>
-                      <li><span class="ion-ios-telephone"></span>(62) 996845012</li>
-                      <li><span class="ion-email"></span>matheusbrunoalmeida@gmail.com</li>
+                      <li><span class="ion-ios-telephone"></span>(62) 99684-5012</li>
+                      <li><span class="ion-email"></span>anna.lara.l2001@gmail.com/li>
                     </ul>
                   </div>
                   <div class="socials">
