--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
   </section>
 
   <!--/ Section Services Star /-->
-  <!-- <section id="service" class="services-mf route">
+  <section id="service" class="services-mf route">
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
@@ -281,7 +281,7 @@
         </div>
       </div>
     </div>
-  </section> -->
+  </section>
   <!--/ Section Services End /-->
 
   <div class="section-counter paralax-mf bg-image" style="background-image: url(img/counters-bg.jpg)">
